2009-07-03  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (WINNT_SUPPORT): Add common-win.elc, like
	src/Makefile.in did.

2009-06-30  Jason Rumney  <jasonr@gnu.org>

	* emacsclient.c (w32_give_focus): Use GetModuleHandle for library
	that is already loaded.
	(w32_set_user_model_id): New function.
	(main): Use it to associate emacsclient with emacs (bug#1849).

2009-06-29  Jim Meyering  <meyering@redhat.com>

	Remove useless if-before-free test.
	* make-docfile.c (scan_lisp_file): Remove useless test.

2009-06-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* Makefile.in (movemail.o): Don't pass -Demacs, unused.

2009-06-21  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.1.

2006-06-09  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* mac-fix-env.m:
	* Makefile.in (mac-fix-env): Remove.

2006-06-06  David Reitter  <david.reitter@gmail.com>

	* Makefile.in (mac-fix-env): Compile it using ALL_CFLAGS.

2009-04-20  Juanma Barranquero  <lekktu@gmail.com>

	* emacsclient.c (print_help_and_exit): Fix typo and tabify (careful
	spacing is required in the message output, as the comment suggests).

2009-04-20  Chong Yidong  <cyd@stupidchicken.com>

	* emacsclient.c (print_help_and_exit): Clarify argument placement
	for short option names.

2009-04-02  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacsclient.c (print_help_and_exit): Fix typo.

2009-03-21  Eli Zaretskii  <eliz@gnu.org>

	* ntlib.c (setuid): Argument is now unsigned.
	(getuid): Return value is now unsigned.
	(getpwuid): Argument is now unsigned.
	(fchown): UID and GID arguments are now unsigned.

	* ntlib.h (fchown): UID and GID arguments are now unsigned.
	(getuid): Return value is now unsigned.
	(setuid): Argument is now unsigned.
	(getpwuid): Remove prototype (it's declared in nt/inc/pwd.h).

2009-03-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacsclient.c (main): Revert part of last change, so
	drive-relative file names again work on Windows.

2009-03-10  Stefan Monnier  <monnier@iro.umontreal.ca>
