@@ -396,7 +396,7 @@ void
 w32_set_user_model_id ()
 {
   HMODULE shell;
-  HRESULT (WINAPI * set_user_model) (PWCSTR);
+  HRESULT (WINAPI * set_user_model) (wchar_t * id);
 
   /* On Windows 7 and later, we need to set the user model ID
      to associate emacsclient launched files with Emacs frames
