@@ -1,3 +1,7 @@
+2009-07-03  Jason Rumney  <jasonr@gnu.org>
+
+	* runemacs.c (set_user_model_id): Use standard types.
+
 2009-06-30  Jason Rumney  <jasonr@gnu.org>
 
 	* runemacs.c (set_user_model_id): New function.
