@@ -1,3 +1,7 @@
+2009-07-03  Jason Rumney  <jasonr@gnu.org>
+
+	* w32term.c (w32_initialize): Use standard types.
+
 2009-07-03  Eli Zaretskii  <eliz@gnu.org>
 
 	* dired.c (Ffile_attributes): Decode user and group names by the
