@@ -1,3 +1,7 @@
+2009-07-03  Jason Rumney  <jasonr@gnu.org>
+
+	* emacsclient.c (w32_set_user_model_id): Use standard types.
+
 2009-07-03  Eli Zaretskii  <eliz@gnu.org>
 
 	* makefile.w32-in (WINNT_SUPPORT): Add common-win.elc, like
